--- a/src/panel.html
+++ b/src/panel.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Panel</title>
+    <title>NextJS Panel</title>
   </head>
   <body>
-    <h1>Panel</h1>
     <div id="root"></div>
   </body>
 </html>
